# uz80as

./: .gitignore  CHANGELOG.md  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  bootstrap  configure.ac  mkwin  uz80as.sln  uz80as.vcxproj
doc/: Makefile.am  dp2200iitb.texi  dp2200tb.texi  g65sc02tb.texi  gbcputb.texi  hd64180tb.texi  i4004tb.texi  i4040tb.texi  i8008tb.texi  i8021tb.texi  i8022tb.texi  i8041tb.texi  i8048tb.texi  i8051tb.texi  i8080tb.texi  i8085tb.texi  m68hc11tb.texi  mc6800tb.texi  mc6801tb.texi  mos6502tb.texi  r6501tb.texi  r65c29tb.texi  rca1802tb.texi  uz80as.texi  w65c02stb.texi  z80tb.texi
src/: Makefile.am  err.c  err.h  expr.c  expr.h  exprint.c  exprint.h  ihex.c  ihex.h  incl.c  incl.h  list.c  list.h  main.c  ngetopt.c  ngetopt.h  options.c  options.h  pp.c  pp.h  prtable.c  srec.c  srec.h  sym.c  sym.h  targets.c  targets.h  utils.c  utils.h  uz80as.c  uz80as.h
tests/: Makefile.am  Spanish128_ROM0.test  blockabove.asm  blockabove.eok  blockabove.test  blockbelow.asm  blockbelow.eok  blockbelow.test  chk.asm  chk.bok  chk.lok  chk.test  chkabove.asm  chkabove.eok  chkabove.lok  chkabove.test  chkall.inc  chkallx.inc  chkbelow.asm  chkbelow.eok  chkbelow.lok  chkbelow.test  chkep0.inc  chkep1.inc  chkeq.asm  chkeq.eok  chkeq.lok  chkeq.test  div.asm  div.eok  div.lok  div.test  dp2200.bok  dp2200.lok  dp2200.test  dp2200ii.asm  dp2200ii.bok  dp2200ii.lok  dp2200ii.test  dp2200v1.asm  (+189 more)
windows/: config.h
