# ===========================================================================
# uz80as, a macro assembler for Z80 based microprocessors.
# ===========================================================================

# uz80as.1 man page depends on uz80as executable being built.
# This order of SUBDIRS ensures it.
SUBDIRS = src doc . tests

dist_doc_DATA = AUTHORS README NEWS COPYING
dist_noinst_DATA = README.md
dist_noinst_SCRIPTS = mkwin bootstrap
