# ===========================================================================
# uz80as, a macro assembler for Z80 based microprocessors.
# ===========================================================================

AM_CFLAGS = $(WARN_CFLAGS)
bin_PROGRAMS = uz80as
uz80as_CFLAGS = $(AM_CFLAGS)
uz80as_SOURCES = \
	ngetopt.c ngetopt.h \
	main.c \
	options.c options.h \
	utils.c utils.h \
	err.c err.h \
	incl.c incl.h \
	sym.c sym.h \
	expr.c expr.h \
	exprint.c exprint.h \
	pp.c pp.h \
	list.c list.h \
	uz80as.c uz80as.h
