# ===========================================================================
# uz80as, a macro assembler for Z80 based microprocessors.
# ===========================================================================

TESTS_ENVIRONMENT = uz80as=$(top_builddir)/src/uz80as$(EXEEXT) \
		    srcdir=$(srcdir) \
		    builddir=$(builddir)

dist_check_SCRIPTS = main.test \
		     z80.test \
		     z80u.test \
		     hd64180.test \
		     gbcpu.test \
		     i8080.test \
		     i8085.test \
		     i8085u.test \
		     dp2200.test \
		     dp2200ii.test \
		     tasmfail.test \
		     longlabel.test \
		     orgbelow.test \
		     orgabove.test \
		     strseq.test \
		     blockbelow.test \
		     blockabove.test \
		     fillneg.test \
		     fillabove.test \
		     genabove.test \
		     fillall.test \
		     noend.test \
		     genafterend.test \
		     multiend.test \
		     chkbelow.test \
		     chkabove.test \
		     chkeq.test \
		     chk.test \
		     pcmul.test \
		     unoff.test \
		     unoffok.test \
		     div.test \
		     mod.test \
		     fillcmdln.test

TESTS = $(dist_check_SCRIPTS)

EXTRA_DIST = igen.sh \
	     icheck.sh \
	     gen.sh \
	     tasmchk.inc \
	     chkall.inc \
	     chkep0.inc \
	     chkep1.inc \
	     main.asm \
	     main.bok \
	     main.lok \
	     z80.asm \
	     z80.bok \
	     z80.lok \
	     z80.eok \
	     z80u.asm \
	     z80u.bok \
	     z80u.lok \
	     z80u.eok \
	     hd64180.asm \
	     hd64180.bok \
	     hd64180.lok \
	     hd64180.eok \
	     gbcpu.asm \
	     gbcpu.bok \
	     gbcpu.lok \
	     gbcpu.eok \
	     i8080.asm \
	     i8080.bok \
	     i8080.lok \
	     i8080.eok \
	     i8085.asm \
	     i8085.bok \
	     i8085.lok \
	     i8085.eok \
	     i8085u.asm \
	     i8085u.bok \
	     i8085u.lok \
	     i8085u.eok \
	     dp2200.asm \
	     dp2200.bok \
	     dp2200.lok \
	     dp2200.eok \
	     dp2200ii.asm \
	     dp2200ii.bok \
	     dp2200ii.lok \
	     dp2200ii.eok \
	     tasmfail.asm \
	     tasmfail.bok \
	     tasmfail.lok \
	     tasmfail.eok \
	     longlabel.asm \
	     longlabel.eok \
	     orgbelow.asm \
	     orgbelow.eok \
	     orgabove.asm \
	     orgabove.eok \
	     strseq.asm \
	     strseq.eok \
	     blockbelow.asm \
	     blockbelow.eok \
	     blockabove.asm \
	     blockabove.eok \
	     fillneg.asm \
	     fillneg.eok \
	     fillabove.asm \
	     fillabove.eok \
	     genabove.asm \
	     genabove.eok \
	     fillall.asm \
	     fillall.bok \
	     fillall.lok \
	     fillall.eok \
	     noend.asm \
	     noend.bok \
	     noend.lok \
	     noend.eok \
	     genafterend.asm \
	     genafterend.eok \
	     multiend.asm \
	     multiend.eok \
	     chkbelow.asm \
	     chkbelow.eok \
	     chkbelow.lok \
	     chkabove.asm \
	     chkabove.eok \
	     chkabove.lok \
	     chkeq.asm \
	     chkeq.eok \
	     chkeq.lok \
	     chk.asm \
	     chk.bok \
	     chk.lok \
	     chk.eok \
	     pcmul.asm \
	     pcmul.bok \
	     pcmul.lok \
	     pcmul.eok \
	     unoff.asm \
	     unoff.eok \
	     unoffok.asm \
	     unoffok.bok \
	     unoffok.lok \
	     unoffok.eok \
	     div.asm \
	     div.lok \
	     div.eok \
	     mod.asm \
	     mod.lok \
	     mod.eok \
	     fillcmdln.asm \
	     fillcmdln.bok \
	     fillcmdln.lok \
	     fillcmdln.eok

