# ===========================================================================
# uz80as, a macro assembler for Z80 based microprocessors.
# ===========================================================================

TESTS_ENVIRONMENT = uz80as=$(top_builddir)/src/uz80as$(EXEEXT) \
		    srcdir=$(srcdir) \
		    builddir=$(builddir)

dist_check_SCRIPTS = main.test \
		     z80.test \
		     z80u.test \
		     hd64180.test \
		     gbcpu.test \
		     i4004.test \
		     i4040.test \
		     i8008.test \
		     i8021.test \
		     i8022.test \
		     i8041.test \
		     i8048.test \
		     i8051.test \
		     i8080.test \
		     i8085.test \
		     i8085u.test \
		     dp2200.test \
		     dp2200ii.test \
		     mos6502.test \
		     r6501.test \
		     g65sc02.test \
		     r65c02.test \
		     r65c29.test \
		     w65c02s.test \
		     mc6800.test \
		     mc6801.test \
		     m68hc11.test \
		     rca1802.test \
		     tasmfail.test \
		     longlabel.test \
		     orgbelow.test \
		     orgabove.test \
		     strseq.test \
		     blockbelow.test \
		     blockabove.test \
		     fillneg.test \
		     fillabove.test \
		     genabove.test \
		     fillall.test \
		     noend.test \
		     genafterend.test \
		     multiend.test \
		     chkbelow.test \
		     chkabove.test \
		     chkeq.test \
		     chk.test \
		     pcmul.test \
		     unoff.test \
		     unoffok.test \
		     div.test \
		     mod.test \
		     fillcmdln.test \
		     unary.test \
		     export.test \
		     endpar.test

TESTS = $(dist_check_SCRIPTS)

EXTRA_DIST = icheck.sh \
	     gen.sh \
	     tasmchk.inc \
	     chkall.inc \
	     chkallx.inc \
	     chkep0.inc \
	     chkep1.inc \
             zx48k.test \
	     main.asm \
	     main.bok \
	     main.lok \
	     z80.asm \
	     z80.bok \
	     z80.lok \
	     z80.eok \
	     z80u.asm \
	     z80u.bok \
	     z80u.lok \
	     z80u.eok \
	     hd64180.asm \
	     hd64180.bok \
	     hd64180.lok \
	     hd64180.eok \
	     gbcpu.asm \
	     gbcpu.bok \
	     gbcpu.lok \
	     gbcpu.eok \
	     i4004.asm \
	     i4004.bok \
	     i4004.lok \
	     i4004.eok \
	     i4040.asm \
	     i4040.bok \
	     i4040.lok \
	     i4040.eok \
	     i8008.asm \
	     i8008.bok \
	     i8008.lok \
	     i8008.eok \
	     i8021.asm \
	     i8021.bok \
	     i8021.lok \
	     i8021.eok \
	     i8022.asm \
	     i8022.bok \
	     i8022.lok \
	     i8022.eok \
	     i8041.asm \
	     i8041.bok \
	     i8041.lok \
	     i8041.eok \
	     i8048.asm \
	     i8048.bok \
	     i8048.lok \
	     i8048.eok \
	     i8051.asm \
	     i8051.bok \
	     i8051.lok \
	     i8051.eok \
	     i8080.asm \
	     i8080.bok \
	     i8080.lok \
	     i8080.eok \
	     i8085.asm \
	     i8085.bok \
	     i8085.lok \
	     i8085.eok \
	     i8085u.asm \
	     i8085u.bok \
	     i8085u.lok \
	     i8085u.eok \
	     dp2200.asm \
	     dp2200.bok \
	     dp2200.lok \
	     dp2200.eok \
	     dp2200ii.asm \
	     dp2200ii.bok \
	     dp2200ii.lok \
	     dp2200ii.eok \
	     mos6502.asm \
	     mos6502.bok \
	     mos6502.lok \
	     mos6502.eok \
	     r6501.asm \
	     r6501.bok \
	     r6501.lok \
	     r6501.eok \
	     g65sc02.asm \
	     g65sc02.bok \
	     g65sc02.lok \
	     g65sc02.eok \
	     r65c02.asm \
	     r65c02.bok \
	     r65c02.lok \
	     r65c02.eok \
	     r65c29.asm \
	     r65c29.bok \
	     r65c29.lok \
	     r65c29.eok \
	     w65c02s.asm \
	     w65c02s.bok \
	     w65c02s.lok \
	     w65c02s.eok \
	     mc6800.asm \
	     mc6800.bok \
	     mc6800.lok \
	     mc6800.eok \
	     mc6801.asm \
	     mc6801.bok \
	     mc6801.lok \
	     mc6801.eok \
	     m68hc11.asm \
	     m68hc11.bok \
	     m68hc11.lok \
	     m68hc11.eok \
	     rca1802.asm \
	     rca1802.bok \
	     rca1802.lok \
	     rca1802.eok \
	     tasmfail.asm \
	     tasmfail.bok \
	     tasmfail.lok \
	     tasmfail.eok \
	     longlabel.asm \
	     longlabel.eok \
	     orgbelow.asm \
	     orgbelow.eok \
	     orgabove.asm \
	     orgabove.eok \
	     strseq.asm \
	     strseq.eok \
	     blockbelow.asm \
	     blockbelow.eok \
	     blockabove.asm \
	     blockabove.eok \
	     fillneg.asm \
	     fillneg.eok \
	     fillabove.asm \
	     fillabove.eok \
	     genabove.asm \
	     genabove.eok \
	     fillall.asm \
	     fillall.bok \
	     fillall.lok \
	     fillall.eok \
	     noend.asm \
	     noend.bok \
	     noend.lok \
	     noend.eok \
	     genafterend.asm \
	     genafterend.eok \
	     multiend.asm \
	     multiend.eok \
	     chkbelow.asm \
	     chkbelow.eok \
	     chkbelow.lok \
	     chkabove.asm \
	     chkabove.eok \
	     chkabove.lok \
	     chkeq.asm \
	     chkeq.eok \
	     chkeq.lok \
	     chk.asm \
	     chk.bok \
	     chk.lok \
	     chk.eok \
	     pcmul.asm \
	     pcmul.bok \
	     pcmul.lok \
	     pcmul.eok \
	     unoff.asm \
	     unoff.eok \
	     unoffok.asm \
	     unoffok.bok \
	     unoffok.lok \
	     unoffok.eok \
	     div.asm \
	     div.lok \
	     div.eok \
	     mod.asm \
	     mod.lok \
	     mod.eok \
	     fillcmdln.asm \
	     fillcmdln.bok \
	     fillcmdln.lok \
	     fillcmdln.eok \
	     unary.asm \
	     unary.bok \
	     unary.lok \
	     unary.eok \
	     export.asm \
	     export.bok \
	     export.lok \
	     export.eok \
	     export.xok \
	     endpar.asm \
	     endpar.eok

